@@ -33,7 +33,7 @@ typedef struct seL4_UserContext_ {
     /* other integer registers */
     seL4_Word x9, x10, x11, x12, x13, x14, x15, x19, x20, x21, x22, x23, x24, x25, x26, x27, x28;
     /* Thread ID registers */
-    seL4_Word tpidr_el0;
+    seL4_Word tpidr_el0, tpidrro_el0;
 } seL4_UserContext;
 
 #endif /* __LIBSEL4_SEL4_SEL4_ARCH_TYPES_H_ */
