@@ -293,7 +293,7 @@ def init_arch_types(wordsize):
             CapType("seL4_ARM_VCPU", wordsize),
             CapType("seL4_ARM_IOSpace", wordsize),
             CapType("seL4_ARM_IOPageTable", wordsize),
-            StructType("seL4_UserContext", wordsize * 35, wordsize),
+            StructType("seL4_UserContext", wordsize * 36, wordsize),
         ],
 
         "arm_hyp": [
