@@ -96,7 +96,6 @@ static inline void access_fpexc(vcpu_t *vcpu, bool_t write)
 static void vcpu_enable(vcpu_t *vcpu)
 {
 #ifdef CONFIG_ARCH_AARCH64
-    vcpu_restore_reg(vcpu, seL4_VCPUReg_TPIDRRO_EL0);
     armv_vcpu_enable(vcpu);
 #else
     vcpu_restore_reg(vcpu, seL4_VCPUReg_SCTLR);
@@ -177,10 +176,6 @@ static void vcpu_enable(vcpu_t *vcpu)
 static void vcpu_disable(vcpu_t *vcpu)
 {
 #ifdef CONFIG_ARCH_AARCH64
-    if (likely(vcpu)) {
-        vcpu_save_reg(vcpu, seL4_VCPUReg_TPIDRRO_EL0);
-        vcpu_hw_write_reg(seL4_VCPUReg_TPIDRRO_EL0, 0);
-    }
     armv_vcpu_disable(vcpu);
 #else
     uint32_t hcr;
